<resources>
    <string name="app_name">MyCalculator</string>
    <string name="calc_text" />
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="slade">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiple">\u00d7</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="clr">CLR</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="c">C</string>
    <string name="pm">+/-</string>
    <string name="percent">%</string>
    <string name="divide">\u00f7</string>
    <string name="ac">AC</string>
</resources>