<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvInput"
                android:layout_width="match_parent"
                android:layout_height= "wrap_content"
                android:layout_gravity="bottom"
                android:padding="10dp"
                android:textSize="48sp"
                android:text="@string/calc_text"
                android:gravity="end|bottom"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con1"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clean"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/ac"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:backgroundTint="@color/light_grey"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="onClear"
                tools:layout_editor_absoluteY="0dp" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/changePlusMinus"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/pm"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:backgroundTint="@color/light_grey"
                android:onClick="onPlusMinus"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/percent"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/percent"
                android:textSize="32sp"
                android:backgroundTint="@color/light_grey"
                android:onClick="onPercent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/divide"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/orange"
                android:onClick="onOperator"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/seven"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:backgroundTint="@color/black2"
                android:onClick="onDigit"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="UsingOnClickInXml" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eight"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:backgroundTint="@color/black2"
                android:onClick="onDigit"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nine"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/black2"
                android:onClick="onDigit"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiple"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/multiple"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/orange"
                android:onClick="onOperator"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/four"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:backgroundTint="@color/black2"
                android:onClick="onDigit"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/five"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:backgroundTint="@color/black2"
                android:onClick="onDigit"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/six"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/black2"
                android:onClick="onDigit"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/orange"
                android:onClick="onOperator"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/one"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:backgroundTint="@color/black2"
                android:onClick="onDigit"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/two"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:backgroundTint="@color/black2"
                android:onClick="onDigit"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/black2"
                android:onClick="onDigit"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:onClick="onOperator"
                android:backgroundTint="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/zero"
                android:layout_width="170dp"
                android:layout_height="90dp"
                android:layout_weight="2"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:backgroundTint="@color/black2"
                android:onClick="onDigit"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dot"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/black2"
                android:onClick="onDecimalPoint"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equal"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/orange"
                android:onClick="onEqual"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>